# cedar_switch_3i3o_power

./: CMakeLists.txt  Kconfig  defconfig.back  defconfig.old  prj.conf  sample.yaml  sections-rom.ld
boards/: air_quality_sensor_f412ce.overlay.bac  cedar_switch_3in3out_power.overlay  cedar_switch_3in3out_power_rev2.overlay
boards/cedar_switch_3in3out_power_board/: Kconfig.cedar_switch_3in3out_power  board.cmake  board.yml  cedar_switch_3in3out_power.dts  cedar_switch_3in3out_power.yaml  cedar_switch_3in3out_power_defconfig
boards/cedar_switch_3in3out_power_rev2/: Kconfig.cedar_switch_3in3out_power_rev2  board.cmake  board.yml  cedar_switch_3in3out_power_rev2.dts  cedar_switch_3in3out_power_rev2.yaml  cedar_switch_3in3out_power_rev2_defconfig
boards/cedar_switch_3in3out_power_rev2/support/: openocd.cfg  openocd.cfg.old
src/: cedar_switch_3in3out_power.code-workspace  global_var.h  main.c  msgq_topiks.c  msgq_topiks.h  settings_topics.h  test_functions.c  test_functions.h  zbus_topics.c  zbus_topics.h
src/diagnostic/: diag_report.c  diag_report.h
src/display/: display.c  display.h
src/io/: io.c  io.h
src/littlefs/: filesystem_helpers.c  filesystem_helpers.h  littlefs_mount.c  littlefs_mount.h
src/mqtt/: ha_mqtt.c  ha_mqtt.h  ha_mqtt_adapter.c  ha_mqtt_adapter.h  ha_mqtt_callback.c  ha_mqtt_helpers.c  ha_mqtt_helpers.h  ha_task.c  ha_task.h  mqtt.c  mqtt_callback.c  mqtt_callback.h  mqtt_ha.c  mqtt_helpers.c  mqtt_helpers.h
src/web/: REST_API.c  REST_API.h  authentication.c  authentication.h  http_common.c  http_common.h  http_server_init.c  http_server_init.h  static_resources.c
src/web/REST_endpoints/: default_relay_state.c  login.c  mqtt_settings.c  relays_state.c  settings_status.c  system_reboot.c  web_user_mgmt.c  webui_delete.c  webui_mkdir.c  webui_upload.c
